# sportsclips

./: README.md  buildServer.json
.cursor/rules/: swift.mdc
.github/workflows/: mypy.yml
agent/: .gitignore  README.md  pyproject.toml
agent/docs/: api-spec.md
agent/examples/: README.md  test_websocket_client.py
agent/src/: api.py  cli.py  live.py  llm.py  pipeline.py  stream.py
agent/src/steps/: __init__.py  agent.py
agent/src/steps/caption_highlight/: __init__.py  prompt.py  step.py
agent/src/steps/detect_highlight/: __init__.py  prompt.py  step.py
agent/src/steps/interesting/: __init__.py  prompt.py  step.py
agent/src/steps/narrate_video/: __init__.py  prompt.py  step.py
agent/src/steps/speak_text/: __init__.py  step.py
agent/src/steps/trim_highlight/: __init__.py  prompt.py  step.py
agent/tests/: conftest.py  test_api.py  test_live.py  test_live_client.py  test_llm.py  test_pipeline_e2e.py  test_stream.py  test_trim_highlight.py  test_video_duration_bug.py
app/sportsclips/: APIClient.swift  ContentView.swift  Item.swift  sportsclipsApp.swift
app/sportsclips.xcodeproj/: project.pbxproj
app/sportsclips/Components/: ActionButton.swift  AnimatedSportsLogo.swift  GameBubble.swift  HeartAnimation.swift  LiquidGlassModifier.swift  LiquidGlassSegmentedControl.swift  Rotating3DLogo.swift  ScrollableSportsLogo.swift
app/sportsclips/Models/: LiveComment.swift  VideoClip.swift
app/sportsclips/Services/: APIService.swift  AppLifecycleManager.swift  (+7 more)
middleware/: API.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
(+57 files in other folders)
